Update compat entries

--- a/test/Project.toml
+++ b/test/Project.toml
@@ -84,11 +84,11 @@ DiffEqOperators = "4.42"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 FastGaussQuadrature = "0.4"
-Flux = "0.12"
+Flux = "0.12, 0.13"
 ForwardDiff = "0.10"
 Glob = "1.3"
 Insolation = "0.3"
-IntervalSets = "0.5, 0.6"
+IntervalSets = "0.5, 0.6, 0.7"
 JLD2 = "0.4"
 JSON = "0.21"
 LambertW = "0.4"
