--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -78,7 +78,7 @@ DiffEqBase = "~6.84.0"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 FastGaussQuadrature = "0.4"
-Flux = "0.12"
+Flux = "0.12, 0.13"
 Glob = "1.3"
 JSON = "0.21"
 LambertW = "0.4"
