--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -302,6 +302,12 @@ steps:
         env:
           CI_PERF_CPUPROFILE: "true"
 
+      - label: ":rocket: flame graph: baroclinic wave (ρe_int)"
+        command: "julia --color=yes --project=perf perf/flame.jl --job_id flame_sphere_baroclinic_wave_rhoe_int --energy_name rhoe_int"
+        artifact_paths: "flame_sphere_baroclinic_wave_rhoe_int/*"
+        env:
+          CI_PERF_CPUPROFILE: "true"
+
       - label: ":rocket: benchmark: baroclinic wave (ρe_tot)"
         command: "julia --color=yes --project=perf perf/benchmark.jl --job_id bm_sphere_baroclinic_wave_rhoe"
         env:
