--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -33,6 +33,7 @@ JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LambertW = "984bce1d-4616-540c-a9ee-88d1112d94c9"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 NCRegressionTests = "1789bc09-29e6-4c93-9c75-fe2179693664"
 NVTX = "5da4648a-3479-48b8-97b9-01cb529c0a1f"
