--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -1,6 +1,6 @@
 env:
   JULIA_VERSION: "1.7.2"
-  MPICH_VERSION: "4.0.0"
+  MPI_IMPL: "openmpi"
   OPENMPI_VERSION: "4.1.1"
   CUDA_VERSION: "11.2"
   OPENBLAS_NUM_THREADS: 1
