--- a/Project.toml
+++ b/Project.toml
@@ -50,7 +50,7 @@ JLD2 = "0.4"
 LambertW = "0.4"
 OperatorFlux = "0.1"
 OrdinaryDiffEq = "5.64.0"
-SciMLBase = "~1.50"
+SciMLBase = "<1.51"
 StaticArrays = "1.4"
 StatsBase = "0.33"
 StochasticDiffEq = "6.42"
