Update Tempest wall time in comparison pipeline.
The --order option in Tempest expects polynomial order + 1 as an input.
The Tempest walltimes in the comparison pipeline are revised to reflect this change for an accurate comparison.

--- a/.buildkite/comparison/pipeline.yml
+++ b/.buildkite/comparison/pipeline.yml
@@ -11,7 +11,7 @@ env:
 agents:
   config: cpu
   queue: central
-  slurm_time: 48:00:00
+#  slurm_time: 48:00:00
 
 steps:
   - label: "init :computer:"
