--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -373,6 +373,12 @@ steps:
           slurm_ntasks_per_node: 8
           slurm_mem: 20GB
 
+      - label: ":rocket: flame graph: perf target callbacks"
+        command: "julia --color=yes --project=perf perf/flame.jl --job_id flame_perf_target_rhoe_callbacks --dt_save_to_sol 1secs --dt_save_restart 1secs --dt_rad 1secs"
+        artifact_paths: "flame_perf_target_rhoe_callbacks/*"
+        agents:
+          slurm_mem: 20GB
+
       - label: ":rocket: benchmark: baroclinic wave (ρe_tot)"
         command: "julia --color=yes --project=perf perf/benchmark.jl --job_id bm_sphere_baroclinic_wave_rhoe"
 
